fix some typos in first draft

--- a/code/first_draft.Rmd
+++ b/code/first_draft.Rmd
@@ -56,10 +56,11 @@ Now that we have converted the image into multi-channels from our Multi-level Pe
 
 # Results
 
-![Accuracy](../figures/accuracy.png){width=50%}
+We compressed the first 500 images into $32 \times 32$ and took out 407 images in 8 main categories as a **toy** dataset. Then, we split this dataset into training set (60%) and test set (40%). We fitted an LeNet5 CNN model with Learning Rate = 0.001, Batch Size = 32, and Epochs = 40. The accuracy plot showed that: As the number of epoch increasing, the training accuracy kept increasing and was approaching to 100%, while the test accuracy also kept increasing at first but stabilized at about 75%. The result was resonable because we were working on a very small toy dataset. It proved that our model was feasible and could be generalized & applied to a larger dataset.
 
-We compressed the first 500 images into $32 \times 32$ and took out 407 images in 8 main categories as a **toy** dataset. Then, we split this dataset into training set (60%) and test set (40%). We fitted an LeNet5 CNN model with Learning Rate = 0.001, Batch Size = 32, and Epochs = 40. The accuracy plot showed that: As the number of epoch increasing, the training accuracy kept increasing and was approaching to 100%, while the test accuracy also kept increasing at first but stabilized at about 75%. The result was resonable because we were working on a very samll toy dataset. It proved that our model was feasible and could be generalized & applied to a larger dataset. 
+\newpage
 
+![Accuracy](../figures/accuracy.png){width=60%}
 
 # Conclusion and Future Work
 
